tests/snapshots/run_wpt_conformance__onnx_averagePool2d_float32_4D_tensor_options_layout_nhwc_and_options_outputShapeRounding_ceil.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "averagePool2d.https.any.js",
    "averagePool2d float32 4D tensor options.layout=nhwc and options.outputShapeRounding=ceil",
    "onnx",
    "PASS",
)
